# Regis-Core

./: .env.example  .gitignore  README.md  cleanup.sh  deploy_to_pi.bat  main.py  pyproject.toml  regis-node.spec  regis-satellite.spec  regis-terminal.spec  regis-worker.spec  regis.bat  requirements.txt  run.bat  run_server.bat  run_terminal.bat  setup_nas.sh  test_discovery.py  test_local_discovery.py  test_pi_discovery.py  test_stream.py  walkthrough.md
.agents/: AGENTS.md  HANDOFF.md  TASKS.md
.deploy/: regis.service
apps/boss_node/: main.py
apps/controller/: __init__.py  main.py
apps/satellite/: main.py
apps/server/: main.py
core/: action_parser.py  config.py  exceptions.py  gemini_engine.py  llm_engine.py  remote_client.py  remote_tools_registry.py  schemas.py  tools_registry.py
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  HITL_MEMORY_CONSOLIDATION.md  MANIFEST.md  ONBOARDING.md  PROMPT_ENGINEERING.md  REACT_DRIFT_STATE_LOSS.md  TOOL_RESPONSE_CONFIRMATION_DILEMMA.md  arch_restrukturyzacja_2025.md  architectural_debt_report.md  auto_discovery_rfc.md  claude_response.md  gemini_response.txt  model_tiering_plan.md  room_aware_context.md
integrations/: ha_client.py  ha_mock.py
regis_cli/: builders.py
regis_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: build_windows.bat  regis-worker.service  regis.service
tests/: test_bind.py  test_config.py  test_entity_registry.py  test_ha_mock.py  test_pi_discovery.py  test_spatial_context.py
tools/: symulator_llm.py  test_context.py
ui/: cli.py
(+43 files in other folders)
