[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regis-core"
version = "0.1.0"
description = "Lekka warstwa abstrakcji miedzy uzytkownikiem a systemem Smart Home"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
controller = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "python-multipart>=0.0.9",
]
worker = [
    "faster-whisper>=1.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.4",
]
satellite = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
]
dev = [
    "rich==13.7.0",
    "questionary==2.0.1",
    "pytest>=7.4.3",
    "pyinstaller>=6.9.0",
    "build>=1.2.1",
]
all = [
    "regis-core[controller]",
    "regis-core[worker]",
    "regis-core[satellite]",
    "regis-core[dev]",
]

[project.scripts]
regis-controller = "apps.controller.main:start"
regis-worker     = "apps.worker.node:start"
regis-terminal   = "apps.terminal.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "apps*", "integrations*"]
